fix spacing issue for smaller screens

--- a/src/calendar.scss
+++ b/src/calendar.scss
@@ -64,6 +64,11 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+
+    @media (max-width: 768px) {
+        gap: 2px;
+    }
+    
 }
 
 .event-name p {
